# vbl

./: CMakeLists.txt  Doxyfile  README.md  readme.md  vbl.c  vbl.h  wscript
demo/: CMakeLists.txt
demo/src/: main.c
src/: vbl_types.h
src/anim/: v_behave.c  v_behave.h  v_swarm.c  v_swarm.h  v_tracer.c  v_tracer.h  vbl_perturbator.c  vbl_perturbator.h  vbl_scene.c  vbl_scene.h
src/arcana/: vbl_arc.c  vbl_arc.h  vbl_branch.c  vbl_branch.h  vbl_cascade.c  vbl_hand.c  vbl_hand.h  vbl_lissajous.c  vbl_lissajous.h  vbl_tracers.c  vbl_tracers.h  vbl_vec_acc.c  vbl_vec_acc.h
src/comms/: v_channel.c  v_channel.h
src/control/: .hgignore  .hgrc  v_bank.c  v_bank.h  vbl_cascade.c  vbl_cascade.h  vbl_input_logger.c  vbl_input_logger.h  vbl_pad.c  vbl_pad.h
src/core/: vbl_hub.c  vbl_hub.h  vbl_log.c  vbl_log.h  vbl_rng.c  vbl_rng.h  vbl_time.c  vbl_time.h
src/ext/: vbl_etherdream.c  vbl_etherdream.h
src/geo/: v_assimp.c  v_assimp.h  v_block.c  v_block.h  v_extrude.c  v_extrude.h  v_lsystem.c  v_lsystem.h  v_objseq.c  v_objseq.h  v_primitives.c  v_primitives.h  v_tesselate.c  v_tesselate.h  v_vec.c  v_vec.h  vbl_cork.c  vbl_cork.h  vbl_hull.c  vbl_hull.h  vbl_qhull.c  vbl_qhull.h
src/particle/: vbl_particle.c  vbl_particle.h  vbl_particle_presets.c  vbl_particle_presets.h  vbl_particleplugin.c  vbl_particleplugin.h  vbl_particleplugin_attractor.c  vbl_particleplugin_attractor.h  vbl_particleplugin_bounds.c  vbl_particleplugin_bounds.h  vbl_particleplugin_emitter.c  vbl_particleplugin_emitter.h  vbl_particleplugin_gravity.c  vbl_particleplugin_gravity.h  vbl_particleplugin_perturbator.c  vbl_particleplugin_perturbator.h  vbl_particleplugin_reaper.c  vbl_particleplugin_reaper.h  vbl_particleplugin_spawner.c  vbl_particleplugin_spawner.h  vbl_particleplugin_template.c  vbl_particleplugin_template.h  vbl_particleplugin_wind.c  vbl_particleplugin_wind.h  vbl_particleplugin_windresistance.c  vbl_particleplugin_windresistance.h  vbl_particlesystem.c  vbl_particlesystem.h  vbl_particlesystem_mgr.c  vbl_particlesystem_mgr.h  vbl_particlesystem_mgr_plugin.c  vbl_particlesystem_mgr_plugin.h  vbl_particlesystem_mgr_plugin_autokill.c  vbl_particlesystem_mgr_plugin_autokill.h
src/plugin/: v_plugins.c  v_plugins.h
src/seq/: v_mark.c  v_mark.h  v_player.c  v_player.h  v_seq.c  v_seq.h  v_track.c  v_track.h
src/slide/: v_slide.c  v_slide.h
src/study/: v_bpm.c  v_bpm.h
src/time/: v_clock.c  v_clock.h  v_stepseq.c  v_stepseq.h
src/util/: v_serial.c  v_serial.h  v_trigger.c  v_trigger.h  v_unit.c  v_unit.h
src/vfx/: vbl_vfx_glitch.c  vbl_vfx_glitch.h
test/: CMakeLists.txt  test_vbl.c
work/: vbl.sln  vbl.vcxproj
work/vbl-ios.xcodeproj/: project.pbxproj
work/vbl-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/vbl.xcodeproj/: project.pbxproj
